--- a/languages/restaurant-reservations-cs_CZ.po
+++ b/languages/restaurant-reservations-cs_CZ.po
@@ -1,8 +1,8 @@
-# Copyright (C) 2015 Restaurant Reservations
-# This file is distributed under the same license as the Restaurant Reservations package.
+# Copyright (C) 2015 Table Bookings
+# This file is distributed under the same license as the Table Bookings package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Restaurant Reservations 1.2.3\n"
+"Project-Id-Version: Table Bookings 1.2.3\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/wp-table-bookings\n"
 "POT-Creation-Date: 2015-01-23 11:25:35+00:00\n"
 "MIME-Version: 1.0\n"
@@ -27,8 +27,8 @@ msgid "Loading"
 msgstr "Nahrávám"
 
 #: includes/Addons.class.php:135
-msgid "Addons for Restaurant Reservations"
-msgstr "Doplňky pro Restaurant Reservations"
+msgid "Addons for Table Bookings"
+msgstr "Doplňky pro Table Bookings"
 
 #: includes/Addons.class.php:157
 msgid "You have been logged out. Please login again to retrieve the addons."
@@ -53,7 +53,7 @@ msgstr ""
 "wp-table-bookings\" target=\"_blank\">podporu</a>."
 
 #: includes/AdminBookings.class.php:65
-msgid "Restaurant Bookings"
+msgid "Table Bookings"
 msgstr "Rezervace"
 
 #: includes/AdminBookings.class.php:66 includes/CustomPostTypes.class.php:42
@@ -858,7 +858,7 @@ msgstr ""
 "zkuste se odhlásit a znovu přihlásit."
 
 #: wp-table-bookings.php:281
-msgid "View the help documentation for Restaurant Reservations"
+msgid "View the help documentation for Table Bookings"
 msgstr "Zobrazit pomocnou dokumentaci pro Rezervace"
 
 #: wp-table-bookings.php:281
@@ -866,7 +866,7 @@ msgid "Help"
 msgstr "Pomoc"
 
 #. Plugin Name of the plugin/theme
-msgid "Restaurant Reservations"
+msgid "Table Bookings"
 msgstr "Rezervace"
 
 #. Plugin URI of the plugin/theme
